objects/Account.object
<CustomObject
    <fields>
        <fullName>EXPRN__owner2Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Experian Owner/Guarantor Lookup2</label>
        <referenceTo>EXPRN__Owner_Grant__c</referenceTo>
        <relationshipLabel>Accounts (Experian Owner/Guarantor Lookup2)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enclosed_Carrier__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the Transporter Account have enclosed carriers at their disposal?</inlineHelpText>
        <label>Enclosed Carrier?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Established__c</fullName>
        <description>Indicated the Year that the Dealership was established. This field is populated with data from Internal Tools during the Source of Truth Data migration</description>
        <label>Established</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exemp_File_in_Tools__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exemp. File in Tools</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Experian_BI_Score__c</fullName>
        <description>Created for Capital Credit Decisioning.  Jira Ticket CAP-453</description>
        <inlineHelpText>Indicates the Experian Business Intelligence Score</inlineHelpText>
        <label>Experian BI Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experian_Business_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Experian Business Information</label>
        <referenceTo>EXPRN__Exp_Business_Info__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Experian_FICO__c</fullName>
        <description>Created for Capital Credit Decisioning.  Jira Ticket CAP-453</description>
        <label>Experian FICO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experian_Tax_Lien__c</fullName>
        <description>Created for Capital Credit Decisioning.  Jira Ticket CAP-453</description>
        <label>Experian Tax Lien</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Experian_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to test FastPass Credit Approval Automation</description>
        <label>Experian Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extended_Arbitration_Type__c</fullName>
        <description>Field indicating if a Dealership has a specific Arbitration plan. This field maps to the dealership_attribute table under the attribute &apos;extended_arbitration_type&apos;</description>
        <label>Extended Arbitration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>default</fullName>
                </value>
                <value>
                    <fullName>disabled</fullName>
                </value>
                <value>
                    <fullName>custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FP_Trigger_RS__c</fullName>
        <description>Used for Fast Pass tracking purpose</description>
        <label>FP Trigger RS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Proactive_Work_Beta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSL Proactive Work Beta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FastPass_Approval__c</fullName>
        <description>CSO-341 Used to trigger Experian API Call.  Field used in flows as well.  Field should be read only to all users except admin and API profiles</description>
        <label>FastPass Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FastPass_Declined_Reason__c</fullName>
        <description>USed to identify why the dealer selected no for the FastPass Opt-In field - Validation rule associated to make this required when opt in is, no.</description>
        <inlineHelpText>Reason for selecting no in the FastPass Opt In</inlineHelpText>
        <label>FastPass Declined Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payment method does not apply</fullName>
                </value>
                <value>
                    <fullName>No reason given</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FastPass_Opt_In__c</fullName>
        <description>This is used to identify if the Dealer has been offered the FastPass option and if so, what their decision was - no selection means it was not offered

Validation rule associated with No selection to ensure no reason is filled in.</description>
        <inlineHelpText>Yes = FastPass Offered and accepted
No = Fast Pass offered and declined
Blank = FastPass not offered</inlineHelpText>
        <label>FastPass Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FastPass_Status_Date__c</fullName>
        <label>FastPass Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who is assigned the Field Account manager Role for the Account</description>
        <label>Field Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Operations_Rep__c</fullName>
        <formula>Owner.Field_Operations_Rep__r.FirstName + &quot; &quot; + Owner.Field_Operations_Rep__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Operations Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flagged_for_Unwind_Batch__c</fullName>
        <label>Flagged for Unwind Batch</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_Plan_Provider__c</fullName>
        <label>Floor Plan Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Next Gear</fullName>
                </value>
                <value>
                    <fullName>AFC</fullName>
                </value>
                <value>
                    <fullName>Allied</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Franchise_Brands__c</fullName>
        <description>Field that hosts the possible Manufacturers a dealership can sell.</description>
        <label>Franchise Brand(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acura</fullName>
                </value>
                <value>
                    <fullName>Aire</fullName>
                </value>
                <value>
                    <fullName>Alfa Romeo</fullName>
                </value>
                <value>
                    <fullName>Aprilia</fullName>
                </value>
                <value>
                    <fullName>Arctic Cat</fullName>
                </value>
                <value>
                    <fullName>Aston Martin</fullName>
                </value>
                <value>
                    <fullName>Atlas</fullName>
                </value>
                <value>
                    <fullName>Audi</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
                <value>
                    <fullName>Bennche</fullName>
                </value>
                <value>
                    <fullName>Bentley</fullName>
                </value>
                <value>
                    <fullName>Big Tex</fullName>
                </value>
                <value>
                    <fullName>BMW</fullName>
                </value>
                <value>
                    <fullName>Bombardier</fullName>
                </value>
                <value>
                    <fullName>Bourget</fullName>
                </value>
                <value>
                    <fullName>Buell</fullName>
                </value>
                <value>
                    <fullName>Buick</fullName>
                </value>
                <value>
                    <fullName>Cadillac</fullName>
                </value>
                <value>
                    <fullName>Can Am</fullName>
                </value>
                <value>
                    <fullName>Can-Am</fullName>
                </value>
                <value>
                    <fullName>CF Moto</fullName>
                </value>
                <value>
                    <fullName>Chevrolet</fullName>
                </value>
                <value>
                    <fullName>Chevy</fullName>
                </value>
                <value>
                    <fullName>Chrysler</fullName>
                </value>
                <value>
                    <fullName>Clipper</fullName>
                </value>
                <value>
                    <fullName>Club Car</fullName>
                </value>
                <value>
                    <fullName>Club Cart</fullName>
                </value>
                <value>
                    <fullName>Coachman</fullName>
                </value>
                <value>
                    <fullName>Cris Craft</fullName>
                </value>
                <value>
                    <fullName>Cruise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Historical_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating that this record was part of a historical load</description>
        <label>From Historical Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>Google Click Identifier, is a unique tracking parameter that Google uses to transfer information between your Google Ads account and your Google Analytics account.</description>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_Green_Seller__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by integration to designate if a seller is go-green.</description>
        <label>Go-Green Seller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gong__Gong_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gong Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Place_Id__c</fullName>
        <description>Field references Google Place Id used to create organization.</description>
        <label>Google Place Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOT_NOTES__c</fullName>
        <description>I.E. NEXT GEAR, KNOWS TIM, ETC</description>
        <label>HOT NOTES</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Halt_True360_Appointments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually controlled field to prevent the creation of any more True360 Service Appointments.</description>
        <inlineHelpText>Manually controlled field to prevent the creation of any more True360 Service Appointments.</inlineHelpText>
        <label>Halt True360 Appointments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Logged_in_30_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Logged in &lt;30 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Status__c</fullName>
        <description>Displays image based on the Customer Health Field</description>
        <formula>CASE(Customer_Health__c,
 &quot;Green&quot;,IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0680a0000080VOT&amp;operationContext=CHATTER&amp;contentId=05T0a00000SdXv5&quot;,&quot;Green&quot;, 40, 65),

&quot;Yellow&quot;,IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0680a0000080VOO&amp;operationContext=CHATTER&amp;contentId=05T0a00000SdXuv&quot;,&quot;Yellow&quot;,40, 65),

&quot;Red&quot;,IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0680a0000080VNk&amp;operationContext=CHATTER&amp;contentId=05T0a00000SdXti&quot;,&quot;Red&quot;, 40,65),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This image displays based on the selection made on the Customer Health Field</inlineHelpText>
        <label>Health Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IST_Account_Owner_Phone__c</fullName>
        <description>IST Account Owner Phone Number and Extension from User Record</description>
        <formula>IST_Account_Owner__r.Phone &amp; &quot; x&quot; &amp; IST_Account_Owner__r.Extension</formula>
        <inlineHelpText>IST Account Owner Phone and Extension</inlineHelpText>
        <label>IST Account Mgr Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IST_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The is a lookup to the user table for tracking IST Owner on Accounts</description>
        <label>IST Account Rep</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The IST Rep must have the &quot;Inside Sales- Account Managers&quot; profile assigned on their user record</errorMessage>
            <filterItems>
                <field>User.ProfileId</field>
                <operation>equals</operation>
                <value>00ej0000001AgjXAAS</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IST_Owner_Name__c</fullName>
        <description>This was created to work around the limit on the number of related objects that can be referenced from the Case object.</description>
        <formula>IST_Account_Owner__r.FirstName + &quot; &quot; + IST_Account_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IST Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IST_Rep_Phone__c</fullName>
        <inlineHelpText>Phone number for IST Rep</inlineHelpText>
        <label>IST Rep Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IST_Rep__c</fullName>
        <label>IST Rep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Territory Manager</fullName>
                </value>
                <value>
                    <fullName>Adam Siedlecki</fullName>
                </value>
                <value>
                    <fullName>Alisha Netto</fullName>
                </value>
                <value>
                    <fullName>Austin Dorr</fullName>
                </value>
                <value>
                    <fullName>Blake Reckley</fullName>
                </value>
                <value>
                    <fullName>CAM Great Lakes</fullName>
                </value>
                <value>
                    <fullName>CAM Northeast</fullName>
                </value>
                <value>
                    <fullName>Chad Dupray</fullName>
                </value>
                <value>
                    <fullName>Christina Caito</fullName>
                </value>
                <value>
                    <fullName>Cory Bertozzi</fullName>
                </value>
                <value>
                    <fullName>Daniel Erbacher</fullName>
                </value>
                <value>
                    <fullName>David Farley</fullName>
                </value>
                <value>
                    <fullName>Eli Matheny</fullName>
                </value>
                <value>
                    <fullName>Elisa Galante</fullName>
                </value>
                <value>
                    <fullName>Emily Germaine</fullName>
                </value>
                <value>
                    <fullName>Ferdinando Cimato</fullName>
                </value>
                <value>
                    <fullName>Glenn Wood</fullName>
                </value>
                <value>
                    <fullName>Jake Bass</fullName>
                </value>
                <value>
                    <fullName>Jake Murray</fullName>
                </value>
                <value>
                    <fullName>Jared McHenry</fullName>
                </value>
                <value>
                    <fullName>Jason Bartz</fullName>
                </value>
                <value>
                    <fullName>Joe Kostek</fullName>
                </value>
                <value>
                    <fullName>Joe Naylor</fullName>
                </value>
                <value>
                    <fullName>John Luraschi</fullName>
                </value>
                <value>
                    <fullName>Josh Bové</fullName>
                </value>
                <value>
                    <fullName>Julia Davis</fullName>
                </value>
                <value>
                    <fullName>Kaley Doyle</fullName>
                </value>
                <value>
                    <fullName>Karen Dusky</fullName>
                </value>
                <value>
                    <fullName>Kerry Nowicki</fullName>
                </value>
                <value>
                    <fullName>Kevin Ruggerio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ignition_Count__c</fullName>
        <description>Used to populate the last ignition Call Field</description>
        <label>Ignition Count</label>
        <summaryFilterItems>
            <field>Retention_Ignition__c.Type__c</field>
            <operation>equals</operation>
            <value>Ignition</value>
        </summaryFilterItems>
        <summaryForeignKey>Retention_Ignition__c.AccountName__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ignition_Max__c</fullName>
        <description>Used to populate the last ignition Call Field</description>
        <label>Ignition Max</label>
        <summarizedField>Retention_Ignition__c.DateofCall__c</summarizedField>
        <summaryFilterItems>
            <field>Retention_Ignition__c.Type__c</field>
            <operation>equals</operation>
            <value>Ignition</value>
        </summaryFilterItems>
        <summaryForeignKey>Retention_Ignition__c.AccountName__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>In_Business_Since__c</fullName>
        <label>In Business Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive_Sub_Status__c</fullName>
        <description>Inactive Reason set when the Active flag is set to False. Do not update this without updating the datahub schema and MySQL tables associated with it in the organizations domain</description>
        <label>Inactive Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Dealership_Inactive_Sub_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentive__c</fullName>
        <label>Incentive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PMP</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Gift Card</fullName>
                </value>
                <value>
                    <fullName>Other/See Notes</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Association__c</fullName>
        <label>Industry Association</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NADA</fullName>
                </value>
                <value>
                    <fullName>NIADA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ineligible_for_Marketing_Promotions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ineligible for Marketing Promotions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Activation_Date__c</fullName>
        <description>This field will populate upon initial activation of an account</description>
        <label>Initial Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inspection_Notes__c</fullName>
        <label>Inspection Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Insurance_Expiration_Date__c</fullName>
        <label>Insurance Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insured__c</fullName>
        <label>Insured</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <description>Price range, age range, type of vehicle etc etc</description>
        <label>Interests</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Management_System__c</fullName>
        <label>Inventory Management System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>vAuto</fullName>
                </value>
                <value>
                    <fullName>MAX Digital / FirstLook</fullName>
                </value>
                <value>
                    <fullName>Inventory+ (DealerSocket)</fullName>
                </value>
                <value>
                    <fullName>Red Bumper (CDK)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_Preference__c</fullName>
        <description>The preferred language for this account.  Field is mapped from Lead preferred language.</description>
        <label>Language Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_30_Days_Bought__c</fullName>
        <label>Last 30 Days Bought</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_30_Days_Buy_Revenue__c</fullName>
        <label>Last 30 Days Buy Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_30_Days_Launched__c</fullName>
        <label>Last 30 Days Launched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_30_Days_Selling_Revenue__c</fullName>
        <label>Last 30 Days Selling Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_30_Days_Sold__c</fullName>
        <label>Last 30 Days Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_90_Days_Bought__c</fullName>
        <description>Field to be deprecated. - MM 11/8/21</description>
        <label>xLast 90 Days Bought</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_90_Days_Sold__c</fullName>
        <description>Field to be deprecated. - MM 11/8/21</description>
        <label>xLast 90 Days Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Bid_Date__c</fullName>
        <label>Last Bid Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Bought__c</fullName>
        <description>The date and time this dealership last recorded a relevant sale.</description>
        <label>Last Bought</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Call_Logged__c</fullName>
        <description>Field that tracks the last call made to a Dealer Account.</description>
        <label>Last Call Logged</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Contacted__c</fullName>
        <label>Last Contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Dealership_Activity__c</fullName>
        <description>Records the date and time of this dealership&apos;s last relevant transaction.</description>
        <label>Last Dealership Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Ignition_Call__c</fullName>
        <description>Displays the most recent Retention &amp; Ignition item, based on type equaling ignition</description>
        <formula>IF( Ignition_Count__c =null ,null, Ignition_Max__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the last time an ignition call was logged in Retention &amp; Ignition</inlineHelpText>
        <label>Last Ignition Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Listed_Date__c</fullName>
        <label>Last Listed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Listing_As_Of_11_18_19__c</fullName>
        <label>Last Listing As Of 11/18/19</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Retention_Call__c</fullName>
        <formula>IF( Retention_Count__c =null,null, Retention_Max__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Retention Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late_Title_Fee_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late Title Fee Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Late_Title_Fee_Start_Date__c</fullName>
        <description>Used with the late Title Fee Field  - will be populated via with manual data loads and now individuals in the permission set &quot;Late Title Fee Access&quot;</description>
        <inlineHelpText>If dealer is charged a late fee, it will only be for auctions that ended on or after this date</inlineHelpText>
        <label>Late Title Fee Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Late_Title_Fee_Unenrollment_Date__c</fullName>
        <description>This field captures the date that the Account has been unenrolled in the late fee program - Populated via late Title Fee Unenrollment Flow</description>
        <inlineHelpText>Most recent date the Account has been unenrolled in the late fee program</inlineHelpText>
        <label>Late Title Fee Unenrollment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Lead_Convert_Status__c</fullName>
        <label>Lead Convert Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Converting</fullName>
                </value>
                <value>
                    <fullName>Identity Id Endpoint Failed</fullName>
                </value>
                <value>
                    <fullName>Eula/Tos Endpoint Failed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Address_Note__c</fullName>
        <label>Legal Address Note</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_City__c</fullName>
        <label>Legal City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Country__c</fullName>
        <label>Legal Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_State__c</fullName>
        <label>Legal State</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Street__c</fullName>
        <label>Legal Street</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Zip_Code__c</fullName>
        <label>Legal Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liability_Amount__c</fullName>
        <description>Amount of Liability Insurance Held by Transporter - filled in manually</description>
        <label>Liability Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>License_Expiration__c</fullName>
        <inlineHelpText>Date License Expires</inlineHelpText>
        <label>xLicense Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_S3_Link__c</fullName>
        <label>License S3 Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifetime_Arbitration_Cost_as_Buyer__c</fullName>
        <description>Populated by the DLRS app to sum the Resolution Amount of Cases related to this Account when it is referenced as the Buying Dealership on an Arbitration Case.</description>
        <label>Lifetime Arbitration Cost as Buyer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>